# LynChat

./: .dockerignore  .gitignore  CONTRIBUTING.md  Cargo.toml  Dockerfile.builder  Focused Plan.txt  LOCAL_DEVELOPMENT.md  PRD.txt  README.md  dev.sh  docker-compose.yml  package-lock.json  rebuild-llm-proxy.sh  start-dev-manual-llm-proxy.sh  start-dev.sh  test_websocket.py  test_websocket_detailed.py  test_websocket_raw.py
.github/: tauri-build.yaml
Plan/: Brainstorm.md  Personal Assistant Product Plan.md
Plan/Brainstorm 1/: Lyn AI Assistant: Epics & Tickets (v1).md  PRD.md
Plan/Brainstorm 2/: Brainstorm2.md  Research Tasks.md  Research results.md  Tickets.md
cli/: Cargo.toml
cli/src/: logging.rs  main.rs  prelude.rs
cli/src/tui/: app.rs  mod.rs  settings.rs  terminal.rs
cli/src/tui/engine/: mod.rs  task.rs
cli/src/tui/events/: handler.rs  mod.rs  stream.rs
cli/src/tui/ui/: button.rs  mod.rs  render.rs
common/: Cargo.toml
common/src/: core.rs  error.rs  lib.rs  prelude.rs
common/src/config/: error.rs  mod.rs
common/src/llm/: config.rs  error.rs  mod.rs
common/src/llm/gemini/: config.rs  mod.rs
common/src/llm/ollama/: config.rs  mod.rs
common/src/memory/: mod.rs
common/src/tools/: error.rs  registry.rs
common/src/tools/calculator/: tests.rs
crates/: .gitignore  Cargo.toml
crates/cli/: Cargo.toml
crates/cli/src/tui/: mod.rs
crates/common/: Cargo.toml
crates/common/src/: core.rs  lib.rs  prelude.rs
crates/common/src/llm/: config.rs  error.rs  mod.rs
crates/common/src/llm/ollama/: config.rs
crates/common/src/memory/: embedding.rs
crates/desktop/: Cargo.toml  package.json
crates/desktop/src/: app.rs  error.rs  main.rs
crates/desktop/src/commands/: chat.rs  events.rs  settings.rs
desktop/: Cargo.toml  build.rs  tauri.conf.json
desktop/src/: app.rs
desktop/src/commands/: chat.rs  mod.rs  pii.rs
lyn-backend/: docker-compose.yml  go.mod
lyn-backend/cmd/llmproxyservice/: main.go
lyn-backend/cmd/webservice/: main.go
lyn-backend/internal/llmproxyservice/: providers.go
lyn-backend/internal/userdataservice/: handlers.go  models.go
lyn-backend/internal/webservice/: handlers.go  jwt_manager.go  server.go
lyn-backend/pkg/api/: types.go  validation.go
lyn-backend/pkg/auth/: jwt.go
lyn-backend/pkg/config/: config.go
lyn-backend/pkg/logging/: logger.go
lyn-cli/: Cargo.toml
lyn-cli/src/: main.rs
lyn-cli/src/tui/: app.rs  mod.rs  ui.rs
lyn-core/: Cargo.toml
lyn-core/src/: core.rs  prelude.rs  utils.rs
lyn-core/src/config/: error.rs  mod.rs
lyn-core/src/llm/: config.rs  error.rs  mod.rs
lyn-core/src/llm/ollama/: config.rs  mod.rs
lyn-core/src/memory/: embedding.rs  error.rs  mod.rs  summarizer.rs
lyn-core/src/memory/qdrant/: config.rs  mod.rs
lyn-core/src/tools/: discovery.rs  error.rs  mod.rs
lyn-core/src/tools/calculator/: error.rs  mod.rs
lyn-core/src/tools/datetime/: error.rs  mod.rs
lyn-frontend/: package-lock.json  package.json  prettier.config.js  svelte.config.ts  vite.config.tauri.ts  vite.config.web.ts
lyn-frontend/src/: app.html
lyn-frontend/src/components/Chat/: AIMessage.svelte  ChatContainer.svelte  ThoughtProcess.svelte  ToolCall.svelte
lyn-frontend/src/components/UI/: Hamburger.svelte  SecurityMascot.svelte  SettingsMenu.svelte
lyn-frontend/src/components/common/: Button.svelte  Card.svelte
lyn-frontend/src/lib/: tauri-helpers.ts
lyn-frontend/src/routes/: +page.svelte
lyn-frontend/src/services/: settingsService.ts
lyn-frontend/src/stores/: security.ts  settings.ts
services/: go.sum
services/backend/: Cargo.toml  Dockerfile
services/backend/src/: error.rs  main.rs  prelude.rs
services/backend/src/endpoints/: chat.rs  mod.rs  settings.rs  ws.rs
services/cmd/userdataservice/: main.go
services/database/: Cargo.toml  Dockerfile  README.md
services/database/migrations/: README.md
services/database/src/: main.rs
services/database/src/api/: mod.rs
services/database/src/api/endpoints/: audit.rs  conversations.rs  (+2 more)
services/database/src/models/: audit_logs.rs  conversations.rs  mod.rs  settings.rs  users.rs
services/embeddings/: Cargo.toml  Dockerfile
services/embeddings/src/: main.rs  prelude.rs
services/embeddings/src/endpoints/: mod.rs  search.rs  upsert.rs
services/embeddings/src/models/: mod.rs
services/internal/llmproxyservice/: anonymizer.go  handlers.go  providers.go  sanitizer.go  server.go
services/internal/userdataservice/: db.go  handlers.go  server.go
services/internal/webservice/: handlers.go  jwt_manager.go  user_data_client.go
services/llm-proxy/: Cargo.toml  Dockerfile
services/llm-proxy/src/: error.rs  main.rs  routes.rs  websocket.rs
services/llm-proxy/src/streaming/: handler.rs  mod.rs  models.rs  routes.rs  utils.rs
services/llm-proxy/src/websocket/: handlers.rs  llm_client.rs  mod.rs  models.rs  routes.rs  session.rs
services/pkg/api/: types.go  validation.go
services/pkg/auth/: jwt.go  middleware.go  password.go
services/pkg/logging/: logger.go
services/proxy-service/: Cargo.toml  Dockerfile  build.rs
services/proxy-service/src/: main.rs  prelude.rs  routes.rs
services/scripts/: init-db.sh  service_isolation.sh
src/: core.rs  main.rs  prelude.rs
ui/: Dockerfile  package-lock.json  package.json  prettier.config.js  svelte.config.js  tailwind.config.cjs  tailwind.config.ts  tauri.conf.json  tsconfig.json  vite.config.tauri.ts  vite.config.web.ts
ui/src/: app.css  app.html
ui/src/components/Chat/: AIMessage.svelte  ChatContainer.svelte  ThoughtProcess.svelte  UserMessage.svelte
ui/src/components/UI/: LoadingAnimation.svelte  MessageInput.svelte  SecurityMascot.svelte
ui/src/components/common/: Theme.svelte
ui/src/lib/components/: Chat.svelte  ChatBox.svelte  NavBar.svelte  Navigation.svelte  StartChat.svelte
ui/src/lib/stores/: chatStore.ts  typingPlaceholderStore.ts  websocketStore.ts
ui/src/routes/: +layout.svelte  +page.svelte
ui/src/routes/chat/: +page.svelte
ui/src/routes/websocket-test/: +page.svelte
ui/src/services/: authService.ts  chatService.ts
ui/src/stores/: chat.ts
