# Description: Lyn AI Assistant Workspace Configuration
# Copyright: (c) 2024 The Lyn Authors
# License: MIT OR Apache-2.0

[workspace]
resolver = "2" # Use the latest resolver
members = [
    "lyn-core",
    "lyn-cli",
    # Add other crates like lyn-gui, lyn-web later
]

# Optional: Define shared dependencies or profiles for the workspace
# [workspace.dependencies]
# async-std = { version = "1.12", features = ["attributes", "unstable"] }
# thiserror = "1.0"
# tracing = "0.1"
# ... other common dependencies ...

[profile.release]
lto = true
codegen-units = 1
strip = true
