# Description: Lyn AI Assistant CLI Client
# Copyright: (c) 2024 The Lyn Authors
# License: MIT OR Apache-2.0

[package]
name = "cli"
edition = "2024"

[[bin]]
name = "cli"
path = "src/main.rs"

[dependencies]
# Project Libraries
common = { path = "../common" } # Depend on the local core library

# Crate Specific Dependencies
async-std = { version = "1.12", features = ["attributes", "tokio1"] }
clap = { version = "4.5", features = ["derive"] }
crossterm = { version = "0.27", features = ["event-stream"] }
pulldown-cmark = "0.11"
serde = { version = "1.0", features = ["derive"] }
color-eyre = "0.6"
ratatui = { version = "0.29.0", features = ["all-widgets"] }
directories = "6.0"
lazy_static = "1.5"
# NOTE: May want this for markdown rendering
# rustyline = "14.0"
tracing-error = "0.2"

# Workspace Dependencies
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = [
    "env-filter",
    "alloc",
    "fmt",
    "local-time",
    "registry",
] }
async-channel = "2.3.1"
futures-util = "0.3"
tui-framework-experiment = "0.4.0"
