[package]
name = "common"
edition = "2024"

[lib]
name = "common"
path = "src/lib.rs"

[dev-dependencies]
approx = "0.5" # For floating point comparisons in tests

[dependencies]
# Crate Specific Dependencies
chrono = { version = "0.4", features = ["serde"] }
config = { version = "0.15", features = ["toml"] }
dirs = "6.0"
meval = "0.2"
ndarray = "0.16"
regex = "1.11.1"
reqwest = { version = "0.12", features = ["json"] }
rig-core = "0.11"
rig-qdrant = "0.1"
schemars = { version = "0.8", features = ["derive"] }
qdrant-client = { version = "1.9" }
url = { version = "2.5.4", features = ["serde"] }

# Workspace Dependencies
async-std = { workspace = true }
async-stream = { workspace = true }
async-trait = { workspace = true }
color-eyre = { workspace = true }
futures = { workspace = true }
futures-util = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
itertools = { workspace = true }
uuid = { workspace = true }
toml = "0.8.20"
