[package]
name = "common"
edition = "2024"

[lib]
name = "common"
path = "src/lib.rs"

[dev-dependencies]
approx = "0.5" # For floating point comparisons in tests

[dependencies]
# Crate Specific Dependencies
chrono = { version = "0.4", features = ["serde"] }
config = { version = "0.15", features = ["toml"] }
dirs = "6.0"
meval = "0.2"
ndarray = "0.16"
regex = "1.11.1"
reqwest = { version = "0.12", features = ["json"] }
rig-core = "0.11"
rig-qdrant = "0.1"
schemars = { version = "0.8", features = ["derive"] }
qdrant-client = { version = "1.9" }
url = { version = "2.5.4", features = ["serde"] }

# Workspace Dependencies
async-std = { version = "1.12", features = ["attributes", "tokio1"] }
async-stream = "0.3.6"
async-trait = "0.1"
color-eyre = "0.6"
futures = "0.3.31"
futures-util = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = [
    "env-filter",
    "alloc",
    "fmt",
    "local-time",
    "registry",
] }
itertools = "0.14.0"
uuid = { version = "1.8", features = ["v4", "serde"] }
toml = "0.8.20"
