[package]
name = "desktop"
edition = "2024"
version = "0.1.0"

[[bin]]
name = "desktop"
path = "src/main.rs"

[build-dependencies]
# Crate Specific Dependencies
tauri-build = { version = "2.2", features = [] }

[dependencies]
# Project Libraries
common = { path = "../common" }

tauri = { version = "2.5", features = ["tracing"] }

# Crate Specific Dependencies
# Workspace Dependencies
serde = { workspace = true }
serde_json = { workspace = true }
async-std = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
async-channel = { workspace = true }
futures-util = { workspace = true }
uuid = { workspace = true }
regex = "1.11.1"
tauri-build = "2.2"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
