[package]
name = "desktop"
edition = "2024"
version = "0.1.0"

[[bin]]
name = "desktop"
path = "src/main.rs"

[build-dependencies]
# Crate Specific Dependencies
tauri-build = { version = "2.2", features = [] }

[dependencies]
# Project Libraries
common = { path = "../common" }

tauri = { version = "2.5", features = ["tracing"] }

# Crate Specific Dependencies
# Workspace Dependencies
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
async-std = { version = "1.12", features = ["attributes", "tokio1"] }
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = [
    "env-filter",
    "alloc",
    "fmt",
    "local-time",
    "registry",
] }
async-channel = "2.3"
futures-util = "0.3"
uuid = { version = "1.8", features = ["v4", "serde"] }
regex = "1.11.1"
tauri-build = "2.2"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
