[package]
name = "embeddings"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "embeddings"
path = "src/main.rs"

[dependencies]
common = { path = "../../common" }
actix-web = "4.10.2"
async-std = { workspace = true }
dotenvy = "0.15.7"
env_logger = "0.11.8"
qdrant-client = "1.13.0"
serde = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde_json = { workspace = true }
