[package]
name = "embeddings"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "embeddings"
path = "src/main.rs"

[dependencies]
common = { path = "../../common" }
actix-web = "4.10.2"
async-std = { version = "1.12", features = ["attributes", "tokio1"] }
dotenvy = "0.15.7"
env_logger = "0.11.8"
qdrant-client = "1.13.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = [
    "env-filter",
    "alloc",
    "fmt",
    "local-time",
    "registry",
] }
