[package]
name = "llm-proxy"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "llm-proxy"
path = "src/main.rs"

[dependencies]
actix-web = "4.4"
actix-web-actors = "4.2"
actix = "0.13"
env_logger = "0.10"
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
async-std = { version = "1.12", features = ["attributes"] }
futures = "0.3"
