[package]
name = "proxy-service"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "llm-proxy"
path = "src/main.rs"

[dependencies]
actix-web = "4.4"
actix-web-actors = "4.2"
actix = "0.13"
actix-cors = "0.6"
env_logger = "0.10"
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
async-std = { version = "1.12", features = ["attributes"] }
async-stream = "0.3"
futures = "0.3"
reqwest = { version = "0.11", features = ["json", "stream"] }
futures-util = "0.3"
uuid = { version = "1.8", features = ["v4", "serde"] }
bytes = "1.5"
thiserror = "1.0"
path-clean = "1.0.1"
lazy_static = "1.4.0"
